PyQtPiClock.2.log
  File "PyQtPiClock.py", line 38
    import ../ApiKeys                                              # NOQA
           ^
SyntaxError: invalid syntax
